Our Lord Jesus Christ is an awesome God

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:site_name" content="Arnold Tonderai Marunda - Workflow Automation Expert" />
     <title>Arnold™ | Workflow Automation Expert</title>
-    <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <script src="https://use.fontawesome.com/c03127b13b.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -232,7 +232,7 @@
           </address>
         </div>
         <div class="contact__layout__column contact__layout__column--right">
-          <img class="contact__map-image invisible" src="/img/map.png">
+          <img class="contact__map-image invisible" src="img/map.png">
         </div>
       </div>
     </section>
@@ -241,8 +241,8 @@
       <h2 class="invisible" id="trading-info__heading">Copyright information</h2>
       <p class="trading-info__text">Copyright © 2021 Workflow Automation Expert | All rights reserved.</p>
     </footer>
-    <script src="../js/form.js"></script>
-    <script src="../js/status.js"></script>
-    <script src="../js/share.js"></script>
+    <script src="js/form.js"></script>
+    <script src="js/status.js"></script>
+    <script src="js/share.js"></script>
   </body>
 </html>
