Our Lord Jesus Christ is an awesome God

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
           </address>
         </div>
         <div class="contact__layout__column contact__layout__column--right">
-          <img class="contact__map-image invisible" src="img/map.png">
+          <img class="contact__map-image invisible" src="">
         </div>
       </div>
     </section>
