--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script>
   </head>
-
+  <script>
+    // Redirect to https
+    if(window.location.protocol != 'https:') {
+        location.href =   location.href.replace("http://", "https://");
+    }
+  </script>
   <body class="layout">
 
     <section aria-labelledby="hero__heading" class="hero">
