--- a/langhamzw/index.html
+++ b/langhamzw/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta property="og:title" content="Reveal.js + H5P.org + Coralproject Talk"/>
     <meta charset="utf-8">
-    <link rel="canonical" href="http://localhost:5000/langhamzw" />
+    <link rel="canonical" href="https://arnold.workflowautomation.expert/langhamzw" />
 		<title>Reveal.js | H5P | Coralproject Talk</title>
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
@@ -94,14 +94,14 @@
   <script type="text/javascript">
     (function() {
         var d = document, s = d.createElement('script');
-        s.src = 'http://localhost:3000/assets/js/embed.js';
+        s.src = 'https://coral-langhamzw.herokuapp.com/assets/js/embed.js';
         s.async = false;
         s.defer = true;
         s.onload = function() {
             Coral.createStreamEmbed({
                 id: "coral-thread",
                 autoRender: true,
-                rootURL: 'http://localhost:3000',
+                rootURL: 'https://coral-langhamzw.herokuapp.com/',
                 // Uncomment these lines and replace with the ID of the
                 // story's ID and URL from your CMS to provide the
                 // tightest integration. Refer to our documentation at
