--- a/langhamzw/index.html
+++ b/langhamzw/index.html
@@ -65,7 +65,7 @@
         <section> 
           <h4>Video</h4>
           <video controls>
-            <source data-src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4" type="video/mp4" />
+            <source data-src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4" />
             Your browser does not support the video tag.
           </video>
         </section>
