Our Lord Jesus Christ is an awesome God

--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
             <section aria-label="Create" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Zapier</span>
+                  <span class="service__heading__content__text">Build Connected apps & services</span>
                 </span>
               </h3>
-              <p class="service__description">Build Connected apps & services</p>
+              <p class="service__description">Webhooks & Rest APIs</p>
               <ul aria-label="Creation services" class="service__list" role="list">
-                <li class="service__list__item">Webhooks</li>
-                <li class="service__list__item">Rest APIs</li>
+                <li class="service__list__item">Zapier automations</li>
+                <li class="service__list__item">or Custom-built automations</li>
               </ul>
             </section>
           </div>
@@ -114,13 +114,13 @@
             <section aria-label="Deliver" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">ActiveCampaign</span>
+                  <span class="service__heading__content__text">Build Customer engagements & experiences ActiveCampaign</span>
                 </span>
               </h3>
-              <p class="service__description">Build Customer engagements & experiences.</p>
+              <p class="service__description">Email & SMS</p>
               <ul aria-label="Delivery services" class="service__list" role="list">
-                <li class="service__list__item">Email</li>
-                <li class="service__list__item">SMS</li>
+                <li class="service__list__item">ActiveCampaign automations</li>
+                <li class="service__list__item">or Custom-built automations</li>
               </ul>
             </section>
           </div>
@@ -129,13 +129,13 @@
             <section aria-label="Deliver" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Klipfolio</span>
+                  <span class="service__heading__content__text">Build Visualised metrics & indicators</span>
                 </span>
               </h3>
-              <p class="service__description">Build Visualised metrics & indicators.</p>
+              <p class="service__description">Dashboards & Reports</p>
               <ul aria-label="Delivery services" class="service__list" role="list">
-                <li class="service__list__item">Dashboards</li>
-                <li class="service__list__item">Reports</li>
+                <li class="service__list__item">Klipfolio automations</li>
+                <li class="service__list__item">or Custom-built automations</li>
               </ul>
             </section>
           </div>
