Our Lord Jesus Christ is an awesome God

--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
             <section aria-label="Create" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Build Connected apps & services</span>
+                  <span class="service__heading__content__text">Build Connected Apps & Services</span>
                 </span>
               </h3>
               <p class="service__description">Webhooks & Rest APIs</p>
               <ul aria-label="Creation services" class="service__list" role="list">
-                <li class="service__list__item">Zapier automations</li>
-                <li class="service__list__item">or Custom-built automations</li>
+                <li class="service__list__item">Zapier or Custom-built</li>
+                <li class="service__list__item">automations</li>
               </ul>
             </section>
           </div>
@@ -114,13 +114,13 @@
             <section aria-label="Deliver" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Build Customer engagements & experiences ActiveCampaign</span>
+                  <span class="service__heading__content__text">Build Customer Engagements & Experiences</span>
                 </span>
               </h3>
               <p class="service__description">Email & SMS</p>
               <ul aria-label="Delivery services" class="service__list" role="list">
-                <li class="service__list__item">ActiveCampaign automations</li>
-                <li class="service__list__item">or Custom-built automations</li>
+                <li class="service__list__item">ActiveCampaign or Custom-built</li>
+                <li class="service__list__item">automations</li>
               </ul>
             </section>
           </div>
@@ -129,13 +129,13 @@
             <section aria-label="Deliver" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Build Visualised metrics & indicators</span>
+                  <span class="service__heading__content__text">Build Visualised Metrics & Indicators</span>
                 </span>
               </h3>
               <p class="service__description">Dashboards & Reports</p>
               <ul aria-label="Delivery services" class="service__list" role="list">
-                <li class="service__list__item">Klipfolio automations</li>
-                <li class="service__list__item">or Custom-built automations</li>
+                <li class="service__list__item">Klipfolio or Custom-built</li>
+                <li class="service__list__item">automations</li>
               </ul>
             </section>
           </div>
