--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <section aria-label="Create" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Build Connected Apps & Services</span>
+                  <span class="service__heading__content__text">Build Connected Apps, IoTs & Services</span>
                 </span>
               </h3>
               <p class="service__description">Webhooks & Rest APIs</p>
