--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
               </h3>
               <p class="service__description">Webhooks & Rest APIs</p>
               <ul aria-label="Creation services" class="service__list" role="list">
-                <li class="service__list__item">Zapier or Custom-built</li>
-                <li class="service__list__item">automations</li>
+                <li class="service__list__item"><a href="https://zapier.com">Zapier</a> or custom-built</li>
+                <li class="service__list__item">processing automations</li>
               </ul>
             </section>
           </div>
@@ -119,8 +119,8 @@
               </h3>
               <p class="service__description">Email & SMS</p>
               <ul aria-label="Delivery services" class="service__list" role="list">
-                <li class="service__list__item">ActiveCampaign or Custom-built</li>
-                <li class="service__list__item">automations</li>
+                <li class="service__list__item"><a href="https://www.activecampaign.com">ActiveCampaign</li>a> or <a href="https://postmarkapp.com">Postmark</a>a> + custom-built</li>
+                <li class="service__list__item">messaging automations</li>
               </ul>
             </section>
           </div>
@@ -134,8 +134,8 @@
               </h3>
               <p class="service__description">Dashboards & Reports</p>
               <ul aria-label="Delivery services" class="service__list" role="list">
-                <li class="service__list__item">Klipfolio or Custom-built</li>
-                <li class="service__list__item">automations</li>
+                <li class="service__list__item"><a href="https://www.klipfolio.com"></a>Klipfolio or <a href="https://quickchart.io/">QuickChart</a> + custom-built</li>
+                <li class="service__list__item">reporting automations</li>
               </ul>
             </section>
           </div>
