--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               </h3>
               <p class="service__description">Email & SMS</p>
               <ul aria-label="Delivery services" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://www.activecampaign.com">ActiveCampaign</li>a> or <a href="https://postmarkapp.com">Postmark</a>a> + custom-built</li>
+                <li class="service__list__item"><a href="https://www.activecampaign.com">ActiveCampaign</a> or <a href="https://postmarkapp.com">Postmark</a> + custom-built</li>
                 <li class="service__list__item">messaging automations</li>
               </ul>
             </section>
