--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               </h3>
               <p class="service__description">Webhooks & Rest APIs</p>
               <ul aria-label="Creation services" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://zapier.com">Zapier</a> or custom-built</li>
+                <li class="service__list__item"><a href="https://zapier.com" target="_blank" rel="nofollow">Zapier</a> or custom-built</li>
                 <li class="service__list__item">processing automations</li>
               </ul>
             </section>
@@ -119,7 +119,7 @@
               </h3>
               <p class="service__description">Email & SMS</p>
               <ul aria-label="Delivery services" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://www.activecampaign.com">ActiveCampaign</a> or <a href="https://postmarkapp.com">Postmark</a> + custom-built</li>
+                <li class="service__list__item"><a href="https://www.activecampaign.com" target="_blank" rel="nofollow">ActiveCampaign</a> or <a href="https://postmarkapp.com" target="_blank" rel="nofollow">Postmark</a> + custom-built</li>
                 <li class="service__list__item">messaging automations</li>
               </ul>
             </section>
@@ -134,7 +134,7 @@
               </h3>
               <p class="service__description">Dashboards & Reports</p>
               <ul aria-label="Delivery services" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://www.klipfolio.com"></a>Klipfolio or <a href="https://quickchart.io/">QuickChart</a> + custom-built</li>
+                <li class="service__list__item"><a href="https://www.klipfolio.com" target="_blank" rel="nofollow">Klipfolio</a> or <a href="https://quickchart.io/" target="_blank" rel="nofollow">QuickChart</a> + custom-built</li>
                 <li class="service__list__item">reporting automations</li>
               </ul>
             </section>
