Our Lord Jesus Christ is an awesome God

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <p class="service__description">Webhooks & Rest APIs</p>
               <ul aria-label="Creation services" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://zapier.com" target="_blank" rel="nofollow">Zapier</a> or <a href="https://try.ruby-lang.org/" target="_blank" rel="nofollow">Ruby</a>-built</li>
-                <li class="service__list__item">processing automations</li>
+                <li class="service__list__item">Processing automations</li>
               </ul>
             </section>
           </div>
@@ -120,7 +120,7 @@
               <p class="service__description">Email & SMS</p>
               <ul aria-label="Delivery services" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://www.activecampaign.com" target="_blank" rel="nofollow">ActiveCampaign</a> or <a href="https://postmarkapp.com" target="_blank" rel="nofollow">Postmark</a> + <a href="https://try.ruby-lang.org/" target="_blank" rel="nofollow">Ruby</a>-built</li>
-                <li class="service__list__item">messaging automations</li>
+                <li class="service__list__item">Messaging automations</li>
               </ul>
             </section>
           </div>
@@ -135,7 +135,7 @@
               <p class="service__description">Dashboards & Reports</p>
               <ul aria-label="Delivery services" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://www.klipfolio.com" target="_blank" rel="nofollow">Klipfolio</a> or <a href="https://quickchart.io/" target="_blank" rel="nofollow">QuickChart</a> + <a href="https://try.ruby-lang.org/" target="_blank" rel="nofollow">Ruby</a>-built</li>
-                <li class="service__list__item">reporting automations</li>
+                <li class="service__list__item">Reporting automations</li>
               </ul>
             </section>
           </div>
