Our Lord Jesus Christ is an awesome God

--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@
         <div class="contact__layout__column contact__layout__column--left">
           <address aria-labelledby="contact__heading">
             <a class="contact__external-link" href="https://github.com/arnoldtonderaimarunda"><i class="fa fa-github-square fa-2x"></i><span class="invisible">View my GitHub profile</span></a>
-             <p class="contact__address"><span class="invisible">Visit us in person at </span>3 Kurrichane Way, Lichendale, Mandara,<br>HARARE, Zimbabwe</p>
+            <a class="contact__external-link" href="mailto: hello@workflowautomation.expert"><i class="fa fa-paper-plane fa-2x"></i><span class="">Send email</span></a>
+            <p class="contact__address"><span class="invisible">Visit us in person at </span>3 Kurrichane Way, Lichendale, Mandara,<br>HARARE, Zimbabwe</p>
           </address>
         </div>
         <div class="contact__layout__column contact__layout__column--right">
