--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               </h3>
               <p class="service__description">Chat, Email & SMS</p>
               <ul aria-label="Delivery services" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://www.activecampaign.com" target="_blank" rel="nofollow">ActiveCampaign</a> or <a href="https://postmarkapp.com" target="_blank" rel="nofollow">Postmark</a> + <a href="https://try.ruby-lang.org/" target="_blank" rel="nofollow">Ruby</a>-built</li>
+                <li class="service__list__item"><a href="https://www.activecampaign.com" target="_blank" rel="nofollow">ActiveCampaign</a> or <a href="https://postmarkapp.com" target="_blank" rel="nofollow">Postmark</a> + <a href="https://www.olark.com" target="_blank" rel="nofollow">Olark</a> + <a href="https://try.ruby-lang.org/" target="_blank" rel="nofollow">Ruby</a>-built</li>
                 <li class="service__list__item">Messaging Automations</li>
               </ul>
             </section>
