There is none like you Lord Jesus Christ. You alone are worthy of praise

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               </h3>
               <p class="service__description">Webhooks & Rest APIs</p>
               <ul aria-label="Creation services" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://zapier.com" target="_blank" rel="nofollow">Zapier</a> or <a href="https://try.ruby-lang.org/" target="_blank" rel="nofollow">Ruby</a>-built</li>
+                <li class="service__list__item"><a href="https://zapier.com" target="_blank" rel="nofollow"><img src="img/zapier_logo.svg" width="23%"/></a><br/>or<br/><a href="https://try.ruby-lang.org/" target="_blank" rel="nofollow">Ruby</a> built</li>
                 <li class="service__list__item">Processing Automations</li>
               </ul>
             </section>
@@ -119,7 +119,7 @@
               </h3>
               <p class="service__description">Chat, Email & SMS</p>
               <ul aria-label="Delivery services" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://www.activecampaign.com" target="_blank" rel="nofollow">ActiveCampaign</a> or <a href="https://postmarkapp.com" target="_blank" rel="nofollow">Postmark</a> + <a href="https://www.olark.com/pricing?ref=arnoldtonderaimarunda&utm_medium=agency-partner&utm_source=arnoldtonderaimarunda&utm_campaign=agency-partner" target="_blank" >Olark</a> + <a href="https://try.ruby-lang.org/" target="_blank" rel="nofollow">Ruby</a>-built</li>
+                <li class="service__list__item"><a href="https://www.activecampaign.com" target="_blank" rel="nofollow"><img src="img/active_campaign_logo.svg" width="55%"/></a><br/>or<br/><a href="https://postmarkapp.com" target="_blank" rel="nofollow"><img src="img/postmark-logo.svg" width="30%"/></a></a> + <a href="https://www.olark.com/pricing?ref=arnoldtonderaimarunda&utm_medium=agency-partner&utm_source=arnoldtonderaimarunda&utm_campaign=agency-partner" target="_blank" ><img src="img/olark_logo.svg" width="15%"/></a> + <a href="https://try.ruby-lang.org/" target="_blank" rel="nofollow">Ruby</a> built</li>
                 <li class="service__list__item">Messaging Automations</li>
               </ul>
             </section>
@@ -134,7 +134,7 @@
               </h3>
               <p class="service__description">Dashboards & Reports</p>
               <ul aria-label="Delivery services" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://www.klipfolio.com" target="_blank" rel="nofollow">Klipfolio</a> or <a href="https://quickchart.io/" target="_blank" rel="nofollow">QuickChart</a> + <a href="https://try.ruby-lang.org/" target="_blank" rel="nofollow">Ruby</a>-built</li>
+                <li class="service__list__item"><a href="https://www.klipfolio.com" target="_blank" rel="nofollow"><img src="img/klipfolio_logo.svg" width="27%"/></a><br/>or<br/><a href="https://quickchart.io/" target="_blank" rel="nofollow"><img src="img//quickchart_logo.png" width="37%"/></a> + <a href="https://try.ruby-lang.org/" target="_blank" rel="nofollow">Ruby</a> built</li>
                 <li class="service__list__item">Reporting Automations</li>
               </ul>
             </section>
