--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Pinterest Sharing  -->
     <meta property="og:type" content="article" />
     <meta property="og:site_name" content="Arnold Tonderai Marunda - Workflow Automation Expert" />
-    <title>Arnold™|Workflow Automation Expert</title>
+    <title>Arnold™ Workflow Automation Expert</title>
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <script src="https://use.fontawesome.com/c03127b13b.js"></script>
@@ -246,5 +246,19 @@
     <script src="js/form.js"></script>
     <script src="js/status.js"></script>
     <script src="js/share.js"></script>
+    <!-- begin olark code -->
+    <script type="text/javascript">
+      ;(function(o,l,a,r,k,y){if(o.olark)return;
+      r="script";y=l.createElement(r);r=l.getElementsByTagName(r)[0];
+      y.async=1;y.src="//"+a;r.parentNode.insertBefore(y,r);
+      y=o.olark=function(){k.s.push(arguments);k.t.push(+new Date)};
+      y.extend=function(i,j){y("extend",i,j)};
+      y.identify=function(i){y("identify",k.i=i)};
+      y.configure=function(i,j){y("configure",i,j);k.c[i]=j};
+      k=y._={s:[],t:[+new Date],c:{},l:a};
+      })(window,document,"static.olark.com/jsclient/loader.js");
+      /* Add configuration calls below this comment */
+      olark.identify('1627-357-10-3354');</script>
+      <!-- end olark code -->
   </body>
 </html>
