--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <meta property="og:type" content="article" />
     <meta property="og:site_name" content="Arnold Tonderai Marunda - Workflow Automation Expert" />
     <title>Arnold™ Workflow Automation Expert</title>
+    <link rel="shortcut icon" type="image/jpg" href="Favicon_Image_Location"/>
+    <link rel="icon" type="image/png" href="https://arnold.workflowautomation.expert/favicon-32x32.png">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <script src="https://use.fontawesome.com/c03127b13b.js"></script>
