--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-  <head>
+  <head profile="https://arnold.workflowautomation.expert">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Facebook/Twitter Sharing -->
@@ -13,8 +13,8 @@
     <meta property="og:type" content="article" />
     <meta property="og:site_name" content="Arnold Tonderai Marunda - Workflow Automation Expert" />
     <title>Arnold™ Workflow Automation Expert</title>
-    <link rel="shortcut icon" type="image/jpg" href="Favicon_Image_Location"/>
-    <link rel="icon" type="image/png" href="https://arnold.workflowautomation.expert/favicon-32x32.png">
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <script src="https://use.fontawesome.com/c03127b13b.js"></script>
