--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <meta property="og:type" content="article" />
     <meta property="og:site_name" content="Arnold Tonderai Marunda - Workflow Automation Expert" />
     <title>Arnold™ Workflow Automation Expert</title>
-    <link rel="shortcut icon" href="/favicon.ico" />
-    <link rel="manifest" href="/manifest.json">
+    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <script src="https://use.fontawesome.com/c03127b13b.js"></script>
