--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <meta property="og:type" content="article" />
     <meta property="og:site_name" content="Arnold Tonderai Marunda - Workflow Automation Expert" />
     <title>Arnold™ Workflow Automation Expert</title>
+    <link rel="apple-touch-icon" type="image/png" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="css/app.css">
