The Lord is my Shepherd, I have everything I need

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section class="about">
       <hr class="about__hr">
       <p class="about__tagline">always creative THINKING different</p>
-      <p class="about__text">I build workflow automations to help startups, enterprises and entrepreneurs connect data and applications across the internet to - Automate repetitive tasks & minimise human error; and Reclaim countless hours & save thousands of dollars.</p>
+      <p class="about__text">I build workflow automations to help startups, enterprises and entrepreneurs connect applications, data and internet of things across the internet to - Automate repetitive tasks & minimise human error; and Reclaim countless hours & save thousands of dollars.</p>
     
       <div >
       <ul class="social-share-btns">
@@ -111,7 +111,7 @@
               </h3>
               <p class="service__description">Webhooks & Rest APIs</p>
               <ul aria-label="Creation services" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://zapier.com" target="_blank" rel="nofollow"><img src="img/zapier_logo.svg" width="23%"/></a><br/>or<br/><a href="https://try.ruby-lang.org/" target="_blank" rel="nofollow"><img src="img/ruby_logo.svg" width="6%"/>Ruby</a><br/>built</li>
+                <li class="service__list__item"><a href="https://zapier.com" target="_blank" rel="nofollow"><img src="img/zapier_logo.svg" width="23%"/></a><br/>or<br/><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" width="5%"/></a></a> + <a href="https://z-wave.me" target="_blank" ><img src="img/zwave_me_logo.png" width="30%"/></a> + <a href="https://www.fibaro.com/en/products/all-domotica-devices/" target="_blank" rel="nofollow"><img src="img/fibaro_logo.svg" width="20%"/></a> + <a href="https://try.ruby-lang.org/" target="_blank" rel="nofollow"><img src="img/ruby_logo.svg" width="6%"/>Ruby</a><br/>built</li>
                 <li class="service__list__item">Processing Automations</li>
               </ul>
             </section>
@@ -236,7 +236,6 @@
         <div class="contact__layout__column contact__layout__column--left">
           <address aria-labelledby="contact__heading">
             <a class="contact__external-link" href="https://github.com/arnoldtonderaimarunda"><i class="fa fa-github-square fa-2x"></i><span class="invisible">View my GitHub profile</span></a>
-            <a class="contact__external-link" href="https://www.polywork.com/arnoldtonderai"><i class="fa fa-id-badge fa-2x"></i><span class="invisible">Visit my Polywork profile</span></a>
             <p class="contact__address"><span class="invisible">Visit us in person at </span>3 Kurrichane Way, Lichendale, Mandara,<br>HARARE, Zimbabwe</p>
           </address>
         </div>
