--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               </h3>
               <p class="service__description">Rest APIs, Webhooks & Devices</p>
               <ul aria-label="Creation services" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://zapier.com" target="_blank" rel="nofollow"><img src="img/zapier_logo.svg" width="23%"/></a><br/>or<br/><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" width="5%"/></a></a> + <a href="https://z-wave.me" target="_blank" ><img src="img/zwave_me_logo.png" width="30%"/></a> + <a href="https://www.fibaro.com/en/products/all-domotica-devices/" target="_blank" rel="nofollow"><img src="img/fibaro_logo.svg" width="20%"/></a> + <a href="https://try.ruby-lang.org/" target="_blank" rel="nofollow"><img src="img/ruby_logo.svg" width="6%"/>Ruby</a><br/>built</li>
+                <li class="service__list__item"><a href="https://zapier.com" target="_blank" rel="nofollow"><img src="img/zapier_logo.svg" width="23%"/></a><br/>or<br/><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" width="8%"/></a></a> +  <a href="https://www.waveshare.com" target="_blank" rel="nofollow"><img src="img/waveshare_logo.png" width="10%"/></a> + <a href="https://z-wave.me" target="_blank" ><img src="img/zwave_me_logo.png" width="30%"/></a> + <a href="https://try.ruby-lang.org/" target="_blank" rel="nofollow"><img src="img/ruby_logo.svg" width="6%"/>Ruby</a><br/>built</li>
                 <li class="service__list__item">Processing Automations</li>
               </ul>
             </section>
@@ -247,7 +247,7 @@
 
     <footer aria-labelledby="trading-info__heading">
       <h2 class="invisible" id="trading-info__heading">Copyright information</h2>
-      <p class="trading-info__text">Copyright © 2021 Workflow Automation Expert | All rights reserved.</p>
+      <p class="trading-info__text">Copyright © 2021 - 2022 Workflow Automation Expert | All rights reserved.</p>
     </footer>
     <script src="js/form.js"></script>
     <script src="js/status.js"></script>
