There is no way and no truth, but Jesus Christ

--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
           <div class="project">
             <section aria-label="RFP">
               <h3 class="project__name">But I can still automate your task.</h3>
-              <p class="project__description">Please outline your work request and expectation.</p>
-
+              <p class="project__description">Please outline your work request and expectation using the chat service👇🏽below.</p>
+<!--
               <form action="" class="with-links-form" method="post">
                 <label class="with-links-form__label" for="firstname">Firstname <small>[required]</small></label>
                 <input class="with-links-form__input" id="firstname" name="firstname"  required type="text">
@@ -206,7 +206,7 @@
                 <input class="with-links-form__input" id="email" name="email" placeholder="your@email.com" required  type="email">
                 <button class="with-links-form__submit" type="submit">Request Now</button>
               </form>
-
+ -->
             </section>
           </div>
         </div>
