Lord Jesus Christ is my guide and advisor

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
               <h3 class="project__name">But, I can still automate your task.</h3>
                <a class="button__click" href="https://app.cal.com/workflowautomationexpert">Book a job briefing session</a>
-               <a class="button__click" href="https://app.cal.com/workflowautomationexpert">View client job reviews</a>
+               <a class="button__click" href="https://www.trustpilot.com/review/arnold.workflowautomation.expert">View client job reviews</a>
                             <!--
               <p class="project__description">Please outline your work request and expectation below.</p>
 
