--- a/index.html
+++ b/index.html
@@ -106,16 +106,37 @@
             <section aria-label="Create" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Build Connected Apps, IoTs & Services</span>
+                  <span class="service__heading__content__text">Build Internet of Things Mockups & Prototypes</span>
                 </span>
               </h3>
-              <p class="service__description">Webhooks & Devices</p>
-              <ul aria-label="Creation services" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://zapier.com" target="_blank" rel="nofollow"><img src="img/zapier_logo.svg" width="23%"/></a><br/>or<br/><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" width="8%"/></a></a> +  <a href="https://www.waveshare.com" target="_blank" rel="nofollow"><img src="img/waveshare_logo.png" width="10%"/></a> + <a href="https://z-wave.me" target="_blank" ><img src="img/zwave_me_logo.png" width="30%"/></a></li>
-                <li class="service__list__item">Processing Automations</li>
+              <p class="service__description">Controllers & Sensors</p>
+              <ul aria-label="Engineering Automations" class="service__list" role="list">
+                <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" width="10%"/></a><br/>and<br/><a href="https://www.waveshare.com" target="_blank" rel="nofollow"><img src="img/waveshare_logo.png" width="10%"/></a> + <a href="https://z-wave.me" target="_blank" ><img src="img/zwave_me_logo.png" width="30%"/></a>+ <a href="https://twilio.com/" target="_blank" rel="nofollow"><img src="img/Twilio-logo-red.png" width="25%"/></a></li>
+                <li class="service__list__item">Engineering Automations</li>
               </ul>
             </section>
           </div>
+
+             
+              <div class="what-we-do__services-layout__column">
+                <section aria-label="Create" class="service">
+                  <h3 class="service__heading">
+                    <span class="service__heading__content">
+                      <span class="service__heading__content__text">Build Connected Apps & Services</span>
+                    </span>
+                  </h3>
+                  <p class="service__description">REST APIs & Webhooks</p>
+                  <ul aria-label="Processing Automation" class="service__list" role="list">
+                    <li class="service__list__item"><a href="https://zapier.com" target="_blank" rel="nofollow"><img src="img/zapier_logo.svg" width="25%"/></a><br/>and<br/><a href="https://www.ruby-lang.org" target="_blank" rel="nofollow"><img src="img/ruby_logo.svg" width="10%"/></a></li>
+                    <li class="service__list__item">Processing Automations</li>
+                  </ul>
+                </section>
+              </div>
+        </div>
+      </div>
+
+        <div class="what-we-do__services-layout">
+          <div class="what-we-do__services-layout__row">
 
           <div class="what-we-do__services-layout__column">
             <section aria-label="Deliver" class="service">
@@ -125,8 +146,8 @@
                 </span>
               </h3>
               <p class="service__description">Email & SMS</p>
-              <ul aria-label="Delivery services" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://www.activecampaign.com" target="_blank" rel="nofollow"><img src="img/active_campaign_logo.svg" width="55%"/></a><br/>or<br/><a href="https://postmarkapp.com" target="_blank" rel="nofollow"><img src="img/postmark-logo.svg" width="30%"/></a></a> + <a href="https://twilio.com/" target="_blank" rel="nofollow"><img src="img/Twilio-logo-red.png" width="25%"/></a></li>
+              <ul aria-label="Messaging Automations" class="service__list" role="list">
+                <li class="service__list__item"><a href="https://www.activecampaign.com" target="_blank" rel="nofollow"><img src="img/active_campaign_logo.svg" width="55%"/></a><br/>and<br/><a href="https://postmarkapp.com" target="_blank" rel="nofollow"><img src="img/postmark-logo.svg" width="40%"/></a></li>
                 <li class="service__list__item">Messaging Automations</li>
               </ul>
             </section>
@@ -140,7 +161,7 @@
                 </span>
               </h3>
               <p class="service__description">Dashboards & Documents</p>
-              <ul aria-label="Delivery services" class="service__list" role="list">
+              <ul aria-label="Reporting Automations" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://www.klipfolio.com" target="_blank" rel="nofollow"><img src="img/klipfolio_logo.svg" width="27%"/></a><br/>or<br/><a href="https://quickchart.io/" target="_blank" rel="nofollow"><img src="img//quickchart_logo.png" width="37%"/></a></li>
                 <li class="service__list__item">Reporting Automations</li>
               </ul>
