Remove new services

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
       <div class="what-we-do__services-layout">
         <div class="what-we-do__services-layout__row">
-         
+    <!--       
           <div class="what-we-do__services-layout__column">
             <section aria-label="Create" class="service">
               <h3 class="service__heading">
@@ -116,13 +116,13 @@
               </ul>
             </section>
           </div>
-
+        -->
              
               <div class="what-we-do__services-layout__column">
                 <section aria-label="Create" class="service">
                   <h3 class="service__heading">
                     <span class="service__heading__content">
-                      <span class="service__heading__content__text">Build Connected Apps & Services</span>
+                      <span class="service__heading__content__text">Build Connected Apps, IoTs & Services</span>
                     </span>
                   </h3>
                   <p class="service__description">REST APIs & Webhooks</p>
@@ -132,11 +132,6 @@
                   </ul>
                 </section>
               </div>
-        </div>
-      </div>
-
-        <div class="what-we-do__services-layout">
-          <div class="what-we-do__services-layout__row">
 
           <div class="what-we-do__services-layout__column">
             <section aria-label="Deliver" class="service">
@@ -167,16 +162,10 @@
               </ul>
             </section>
           </div>
+
         </div>
       </div>
-      <div style="margin-top: 4em;">
-            <!-- TrustBox widget - Micro Review Count 
-            <div class="trustpilot-widget" data-locale="en-US" data-template-id="5419b6a8b0d04a076446a9ad" data-businessunit-id="609657cd9d0f7c0001010a57" data-style-height="24px" data-style-width="100%" data-theme="light">
-              <a href="https://www.trustpilot.com/review/arnold.workflowautomation.expert" target="_blank" rel="noopener">Trustpilot</a>
-            </div>
-         End TrustBox widget -->
-      </div>
-      </div>
+
     </section>
 
     <section aria-labelledby="projects__heading" id="projects">
