--- a/index.html
+++ b/index.html
@@ -99,30 +99,17 @@
     <section aria-labelledby="what-we-do__heading" id="what-we-do">
       <h2 class="what-we-do__heading" id="what-we-do__heading">Expertise</h2>
 
+
+
       <div class="what-we-do__services-layout">
         <div class="what-we-do__services-layout__row">
-    <!--       
-          <div class="what-we-do__services-layout__column">
-            <section aria-label="Create" class="service">
-              <h3 class="service__heading">
-                <span class="service__heading__content">
-                  <span class="service__heading__content__text">Build Internet of Things Mockups & Prototypes</span>
-                </span>
-              </h3>
-              <p class="service__description">Controllers & Sensors</p>
-              <ul aria-label="Engineering Automations" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" width="10%"/></a><br/>and<br/><a href="https://www.waveshare.com" target="_blank" rel="nofollow"><img src="img/waveshare_logo.png" width="10%"/></a> + <a href="https://z-wave.me" target="_blank" ><img src="img/zwave_me_logo.png" width="30%"/></a>+ <a href="https://twilio.com/" target="_blank" rel="nofollow"><img src="img/Twilio-logo-red.png" width="25%"/></a></li>
-                <li class="service__list__item">Engineering Automations</li>
-              </ul>
-            </section>
-          </div>
-        -->
+       
              
               <div class="what-we-do__services-layout__column">
                 <section aria-label="Create" class="service">
                   <h3 class="service__heading">
                     <span class="service__heading__content">
-                      <span class="service__heading__content__text">Build Connected Apps, IoTs & Services</span>
+                      <span class="service__heading__content__text">Build Connected Apps & Services</span>
                     </span>
                   </h3>
                   <p class="service__description">REST APIs & Webhooks</p>
@@ -160,6 +147,38 @@
                 <li class="service__list__item"><a href="https://www.klipfolio.com" target="_blank" rel="nofollow"><img src="img/klipfolio_logo.svg" width="27%"/></a><br/>or<br/><a href="https://quickchart.io/" target="_blank" rel="nofollow"><img src="img//quickchart_logo.png" width="37%"/></a></li>
                 <li class="service__list__item">Reporting Automations</li>
               </ul>
+            </section>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="what-we-do__services-layout">
+        <div class="what-we-do__services-layout__row">
+    <!--      -->  
+
+       <div class="what-we-do__services-layout__column">
+            <section aria-label="Create" class="service">
+            </section>
+        </div>
+
+          <div class="what-we-do__services-layout__column">
+            <section aria-label="Create" class="service">
+              <h3 class="service__heading">
+                <span class="service__heading__content">
+                  <span class="service__heading__content__text">Build 'Internet of Things' Prototypes</span>
+                </span>
+              </h3>
+              <p class="service__description">Enclosures, Actuators & Sensors</p>
+              <ul aria-label="Controlling Automation" class="service__list" role="list">
+                <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" width="10%"/></a><br/>and<br/><a href="https://www.waveshare.com" target="_blank" rel="nofollow"><img src="img/waveshare_logo.png" width="10%"/></a> + <a href="https://z-wave.me" target="_blank" ><img src="img/zwave_me_logo.png" width="30%"/></a> + <a href="https://twilio.com/" target="_blank" rel="nofollow"><img src="img/Twilio-logo-red.png" width="25%"/></a> + <a href="https://www.prusa3d.com" target="_blank" rel="nofollow"><img src="img/prusa_logo.svg" width="15%"/></a></li>
+                <li class="service__list__item">Controlling Automations</li>
+              </ul>
+            </section>
+          </div>
+
+          <div class="what-we-do__services-layout__column">
+            <section aria-label="Create" class="service">
             </section>
           </div>
 
