Radical for Christ Jesus

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <section aria-label="Create" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Build 'Internet of Things' Prototypes</span>
+                  <span class="service__heading__content__text">Build 'Internet of Things' Prototypes & Kits</span>
                 </span>
               </h3>
               <p class="service__description">Enclosures, Actuators & Sensors</p>
