Radical for Christ Jesus

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section class="about">
       <hr class="about__hr">
       <p class="about__tagline">always creative THINKING different</p>
-      <p class="about__text">I build workflow automations to help startups, enterprises and entrepreneurs connect applications, data and internet of things across the internet to - Automate repetitive tasks; and Control devices. Minimising human error; and Reclaim countless hours - Saving thousands of dollars.</p>
+      <p class="about__text">I build workflow automations to help startups, enterprises and entrepreneurs connect applications, data and internet of things across the internet to - Automate repetitive tasks; and Control devices. Minimise human error; and Reclaim countless hours - Saving thousands of dollars.</p>
     
       <div >
       <ul class="social-share-btns">
