Radical for Christ Jesus

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               </h3>
               <p class="service__description">Enclosures, Actuators & Sensors</p>
               <ul aria-label="Controlling Automation" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" width="10%"/></a><br/>and<br/><a href="https://www.waveshare.com" target="_blank" rel="nofollow"><img src="img/waveshare_logo.png" width="10%"/></a> + <a href="https://www.w3.org/community/web-bluetooth/" target="_blank" ><img src="img/bluetooth_logo.png" width="10%"/></a> + <a href="https://twilio.com/" target="_blank" rel="nofollow"><img src="img/Twilio-logo-red.png" width="25%"/></a> + <a href="https://www.prusa3d.com" target="_blank" rel="nofollow"><img src="img/prusa_logo.svg" width="15%"/></a></li>
+                <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" width="10%"/></a><br/>and<br/><a href="https://www.waveshare.com" target="_blank" rel="nofollow"><img src="img/waveshare_logo.png" width="10%"/></a> + <a href="https://www.w3.org/community/web-bluetooth/" target="_blank" ><img src="img/bluetooth_logo.png" width="10%"/></a> + <a href="https://www.twilio.com/iot" target="_blank" rel="nofollow"><img src="img/Twilio-logo-red.png" width="25%"/></a> + <a href="https://www.prusa3d.com" target="_blank" rel="nofollow"><img src="img/prusa_logo.svg" width="15%"/></a></li>
                 <li class="service__list__item">Controlling Automations</li>
               </ul>
             </section>
