--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <section aria-label="Create" class="service">
                   <h3 class="service__heading">
                     <span class="service__heading__content">
-                      <span class="service__heading__content__text">Build Connected Apps & Services</span>
+                      <span class="service__heading__content__text">Build<br>Connected<br>Services</span>
                     </span>
                   </h3>
                   <p class="service__description">REST APIs & Webhooks</p>
@@ -124,7 +124,7 @@
             <section aria-label="Deliver" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Build Customer Engagements & Experiences</span>
+                  <span class="service__heading__content__text">Build<br>Customer<br>Engagements</span>
                 </span>
               </h3>
               <p class="service__description">Marketing & Transactional</p>
@@ -139,7 +139,7 @@
             <section aria-label="Deliver" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Build Visualised Metrics & Indicators</span>
+                  <span class="service__heading__content__text">Build<br>Visualised<br>Metrics</span>
                 </span>
               </h3>
               <p class="service__description">Dashboards & Documents</p>
@@ -166,13 +166,13 @@
             <section aria-label="Create" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Build 'Internet of Things' Prototypes & Kits</span>
+                  <span class="service__heading__content__text">Build<br>Internet<br>of<br>Things</span>
                 </span>
               </h3>
-              <p class="service__description">Controllers, Actuators & Sensors</p>
+              <p class="service__description">Apps, Actuators & Sensors</p>
               <ul aria-label="Controlling Automation" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" width="10%"/></a><br/>and<br/><a href="https://www.waveshare.com" target="_blank" rel="nofollow"><img src="img/waveshare_logo.png" width="10%"/></a> + <a href="https://www.w3.org/community/web-bluetooth/" target="_blank" ><img src="img/bluetooth_logo.png" width="10%"/></a> + <a href="https://www.gsma.com/iot/narrow-band-internet-of-things-nb-iot/" target="_blank" rel="nofollow"><img src="img/nbiot_logo.png" width="25%"/></a> + <a href="https://www.prusa3d.com" target="_blank" rel="nofollow"><img src="img/prusa_logo.svg" width="15%"/></a></li>
-                <li class="service__list__item">Controlling Automations</li>
+                <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" width="10%"/></a><br/>and<br/><a href="https://www.waveshare.com" target="_blank" rel="nofollow"><img src="img/waveshare_logo.png" width="10%"/></a> + <a href="https://anvil.works" target="_blank" ><img src="img/anvil_logo.svg" width="10%"/></a> +  <a href="https://www.prusa3d.com" target="_blank" rel="nofollow"><img src="img/prusa_logo.svg" width="15%"/></a></li>
+                <li class="service__list__item">Control Automations</li>
               </ul>
             </section>
           </div>
