--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                   <span class="service__heading__content__text">Build<br>Customer<br>Engagements</span>
                 </span>
               </h3>
-              <p class="service__description">Marketing & Transactional</p>
+              <p class="service__description">Marketing & Transactional Campaigns</p>
               <ul aria-label="Messaging Automations" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://www.activecampaign.com" target="_blank" rel="nofollow"><img src="img/active_campaign_logo.svg" width="55%"/></a><br/>and<br/><a href="https://postmarkapp.com" target="_blank" rel="nofollow"><img src="img/postmark-logo.svg" width="40%"/></a></li>
                 <li class="service__list__item">Email Automations</li>
