Lord Jesus Christ my Saviour, my God

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               </h3>
               <p class="service__description">Apps, Actuators & Sensors</p>
               <ul aria-label="Controlling Automation" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" width="10%"/></a><br/>and<br/><a href="https://www.waveshare.com" target="_blank" rel="nofollow"><img src="img/waveshare_logo.png" width="10%"/></a> + <a href="https://anvil.works" target="_blank" ><img src="img/anvil_logo.svg" width="10%"/></a> +  <a href="https://www.prusa3d.com" target="_blank" rel="nofollow"><img src="img/prusa_logo.svg" width="15%"/></a></li>
+                <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" width="10%"/></a><br/>and<br/><a href="https://www.waveshare.com/product/raspberry-pi.htm" target="_blank" rel="nofollow"><img src="img/waveshare_logo.png" width="10%"/></a> + <a href="https://anvil.works/pico" target="_blank" ><img src="img/anvil_logo.svg" width="10%"/></a> +  <a href="https://www.prusa3d.com/category/original-prusa-mini/" target="_blank" rel="nofollow"><img src="img/prusa_logo.svg" width="15%"/></a></li>
                 <li class="service__list__item">Control Automations</li>
               </ul>
             </section>
