--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <section aria-label="Create" class="service">
                   <h3 class="service__heading">
                     <span class="service__heading__content">
-                      <span class="service__heading__content__text">Build<br>Integrated<br>Services</span>
+                      <span class="service__heading__content__text">Build<br>Integrated<br>Microservices</span>
                     </span>
                   </h3>
                   <p class="service__description">REST APIs & Webhooks</p>
