--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
         <div class="what-we-do__services-layout__row">
        
           <div class="what-we-do__services-layout__column">
-            <section aria-label="Create" class="service">
+            <section aria-label="1" class="service">
             </section>
           </div>
 
           <div class="what-we-do__services-layout__column">
-            <section aria-label="Deliver" class="service">
+            <section aria-label="2" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
                   <span class="service__heading__content__text">Build<br>Integrated<br>Services</span>
@@ -123,7 +123,7 @@
           </div>
 
           <div class="what-we-do__services-layout__column">
-            <section aria-label="Deliver" class="service">
+            <section aria-label="3" class="service">
             </section>
           </div>
 
@@ -132,12 +132,12 @@
         <div class="what-we-do__services-layout__row">
        
           <div class="what-we-do__services-layout__column">
-            <section aria-label="Create" class="service">
+            <section aria-label="1" class="service">
             </section>
           </div>
 
           <div class="what-we-do__services-layout__column">
-            <section aria-label="Deliver" class="service">
+            <section aria-label="2" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
                   <span class="service__heading__content__text">Build<br>Internet of<br>Things</span>
@@ -152,7 +152,7 @@
           </div>
 
           <div class="what-we-do__services-layout__column">
-            <section aria-label="Deliver" class="service">
+            <section aria-label="3" class="service">
             </section>
           </div>
         </div>
