--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               </h3>
               <p class="service__description">REST APIs & Webhooks</p>
               <ul aria-label="Processing Automation" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://zapier.com" target="_blank" rel="nofollow"><img src="img/zapier_logo.png" width="30%"/></a><br/>or<br/><a href="https://www.ruby-lang.org" target="_blank" rel="nofollow"><img src="img/ruby_logo.svg" width="10%"/></a></li>
+                <li class="service__list__item"><a href="https://zapier.com" target="_blank" rel="nofollow"><img src="img/zapier_logo.png" width="30%"/></a><br/><br/>or<br/><a href="https://www.ruby-lang.org" target="_blank" rel="nofollow"><img src="img/ruby_logo.svg" width="10%"/></a></li>
                 <li class="service__list__item">Process Automations</li>
               </ul>
             </section>
