--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="hero__body">
         <h2 class="hero__subheading">👋 Hello, I’m Arnold Tonderai Marunda.</h2>
         <div class="hero__text">
-          <p class="hero__intro">✝️ Jesus Christ Follower. ♂♀ Married - Father of 5 kids. 📚 Lifelong Learner. 🍏 Alternative Educator. 💻 Workflow Automation Expert<small> - since 2017.</small></p>
+          <p class="hero__intro">✝️ Believer of Jesus Christ. ♂♀ Married - Father of 5 kids. 📚 Lifelong Learner. 🍏 Alternative Educator. 💻 Workflow Automation Expert<small> - since 2017.</small></p>
         </div>
       </div>
     </section>
@@ -46,7 +46,7 @@
     <section class="about">
       <hr class="about__hr">
       <p class="about__tagline">always creative THINKING different</p>
-      <p class="about__text">I build workflow automations to help entrepreneurs, startups and organisations connect people, applications, data and internet of things across the internet to - Automate repetitive tasks; Transfer knowledge, and Control devices. Minimising human error; and Reclaiming countless hours - Saving thousands of dollars.</p>
+      <p class="about__text">I build workflow automations to help entrepreneurs, startups and organisations connect people, applications, data and internet of things across the internet to - Automate repetitive tasks; and Control devices. Minimising human error; and Reclaiming countless hours - Saving thousands of dollars.</p>
     
       <div >
       <ul class="social-share-btns">
