--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               </h3>
               <p class="service__description">Automators & Bots</p>
               <ul aria-label="Machine Learning Automation" class="service__list" role="list">
-                <li class="service__list__item"><a href="https://www.openai.com" target="_blank" rel="nofollow"><img src="img/openai_logo.png" width="10%"/></a></li>
+                <li class="service__list__item"><a href="https://www.openai.com" target="_blank" rel="nofollow"><img src="img/openai_logo.svg" width="10%"/></a></li>
                 <li class="service__list__item">Image & Text Manipulators</li>
               </ul>
             </section>
