--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               <p class="service__description">Automators & Bots</p>
               <ul aria-label="Machine Learning Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://www.openai.com" target="_blank" rel="nofollow"><img src="img/openai_logo.svg" width="35%"/></br></a></li>
-                <li class="service__list__item">Generated Images, Texts & Code</li>
+                <li class="service__list__item">Generative Image, Text & Code</li>
               </ul>
             </section>
           </div>
