--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
  
     <section aria-labelledby="clients__heading" id="clients">
       <h2 class="clients__heading" id="clients__heading">Recommended Tools</h2>
-      <p class="clients__description">Technologies and services that I use or integrated in projects and liked!</p>
+      <p class="about__text">Technologies and services that I like & use; or Integrated in workflow automation projects!</p>
       <ul aria-labelledby="clients__heading" class="clients__list" role="list">
         <li class="clients__list__item"><a href="https://www.giftupapp.com?fpr=1wf68" target="_blank" style="outline:none;border:none; width:50%;"><img src="https://d2gdx5nv84sdx2.cloudfront.net/uploads/3dkzweqw/marketing_asset/banner/3217/Logo_Black_Yellow_White.png" alt="giftupapp" border="0"/></a></li>
       </ul>
