--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       <h2 class="clients__heading" id="clients__heading">Recommended Tools</h2>
       <p class="about__text">Technologies and services that I like, use & recommend.</p>
       <ul aria-labelledby="clients__heading" class="clients__list" role="list">
-        <li class="clients__list__item"><a href="https://www.giftupapp.com?fpr=1wf68" target="_blank" style="outline:none;border:none;"><img src="https://d2gdx5nv84sdx2.cloudfront.net/uploads/3dkzweqw/marketing_asset/banner/3217/Logo_Black_Yellow_White.png" style=" width:75%" alt="giftupapp" border="0"/></a><p class="about__text">The simplest way to sell your </br>business' gift cards online.</p></li>
+        <li class="clients__list__item"><a href="https://www.giftupapp.com?fpr=1wf68" target="_blank" style="outline:none;border:none;"><img src="https://d2gdx5nv84sdx2.cloudfront.net/uploads/3dkzweqw/marketing_asset/banner/3217/Logo_Black_Yellow_White.png" style=" width:75%" alt="giftupapp" border="0"/></a><p class="project__name">The simplest way to sell your </br>business' gift cards online.</p></li>
       </ul>
     </section>
   
