--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
       <p class="about__text">Technologies and services that I like, use & recommend.</p>
       <ul aria-labelledby="clients__heading" class="clients__list" role="list">
          <li class="clients__list__item"><a href="https://www.giftupapp.com?fpr=1wf68" target="_blank" style="outline:none;border:none;"><img src="https://d2gdx5nv84sdx2.cloudfront.net/uploads/3dkzweqw/marketing_asset/banner/3217/Logo_Black_Yellow_White.png" style=" width:90%" alt="giftupapp" border="0"/></a><p class="project__name">The simplest way to sell your business' gift cards online.</p></li>
-         <li class="clients__list__item"><a href="https://get.surfshark.net/aff_c?offer_id=926&aff_id=18085&file_id=379" target="_blank"><img src="surfshark_logo.png" width="417" height="96" border="0" /></a><p class="project__name">Improve your online security & privacy with the award-winning VPN service.</p><img src="https://get.surfshark.net/aff_i?offer_id=926&file_id=379&aff_id=18085" width="0" height="0" style="position:absolute;visibility:hidden;" border="0" /></li> 
+         <li class="clients__list__item"><a href="https://get.surfshark.net/aff_c?offer_id=926&aff_id=18085&file_id=379" target="_blank"><img src="img/surfshark_logo.png" width="417" height="96" border="0" /></a><p class="project__name">Improve your online security & privacy with the award-winning VPN service.</p><img src="https://get.surfshark.net/aff_i?offer_id=926&file_id=379&aff_id=18085" width="0" height="0" style="position:absolute;visibility:hidden;" border="0" /></li> 
       </ul>
     </section>
   
