--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
     </section>
  
     <section aria-labelledby="clients__heading" id="clients">
-      <h2 class="clients__heading" id="clients__heading">Recommended Tools</h2>
-      <p class="about__text">Technologies and services that I like, use & recommend. <b class="message" style="color:#7713fe;"></b></p>
+      <h2 class="clients__heading" id="clients__heading">Recommended</h2>
+      <p class="about__text">Technologies that I like & use. <b class="message" style="color:#7713fe;"></b></p>
       <ul aria-labelledby="clients__heading" class="clients__list" role="list">
          <li class="clients__list__item"><a href="https://www.giftupapp.com?fpr=1wf68" target="_blank" style="outline:none;border:none;"><img src="https://d2gdx5nv84sdx2.cloudfront.net/uploads/3dkzweqw/marketing_asset/banner/3217/Logo_Black_Yellow_White.png" style=" width:90%" alt="giftupApp" border="0"/></a><p class="project__name">Sell your business' gift cards online with the <a href="https://www.giftupapp.com?fpr=1wf68" target="_blank">GiftUp!</a>.</p></li>
          <li class="clients__list__item"><a href="https://get.surfshark.net/aff_c?offer_id=926&aff_id=18085&file_id=379" target="_blank"><img src="https://media.go2speed.org/brand/files/surfshark/926/Surfshark_pos_96px.png" style=" width:90%" alt="surfsharkVPN" border="0" /></a><p class="project__name">Improve your online security & privacy with the award-winning <a href="https://get.surfshark.net/aff_c?offer_id=926&aff_id=18085&file_id=379" target="_blank">Surfshark VPN</a>.</p><img src="https://get.surfshark.net/aff_c?offer_id=926&aff_id=18085" width="0" height="0" style="position:absolute;visibility:hidden;" border="0" /></li> 
